--- a/apply/index.html
+++ b/apply/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>reduce</title>
-    <style rel="stylesheet" href="css.css"></style>
+    <title>apply</title>
 </head>
 <body>
-    <script src="st.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
