--- a/call/index.html
+++ b/call/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>reduce</title>
-    <style rel="stylesheet" href="css.css"></style>
+    <title>call</title>
+    <style ref="stylesheet"  href="script.css"></style>
 </head>
 <body>
     <script src="st.js"></script>
